--- a/src/main/webapp/app1/templates/screen/index.vm
+++ b/src/main/webapp/app1/templates/screen/index.vm
@@ -1,3 +1,48 @@
+<script>
+    //获取当前时间
+    function getNowFormatDate() {
+        var date = new Date();
+        var seperator1 = "-";
+        var seperator2 = ":";
+        var month = date.getMonth() + 1;
+        var strDate = date.getDate();
+        if (month >= 1 && month <= 9) {
+            month = "0" + month;
+        }
+        if (strDate >= 0 && strDate <= 9) {
+            strDate = "0" + strDate;
+        }
+        var currentdate = date.getFullYear() + seperator1 + month + seperator1 + strDate
+                + " " + date.getHours() + seperator2 + date.getMinutes()
+                + seperator2 + date.getSeconds();
+        return currentdate;
+    }
+    function updateTime() {
+    $("#time").html(getNowFormatDate());
+    }
+    $(function () {
+        window.setInterval(updateTime,100)
+    })
+</script>
+
+
+<style type="text/css">
+    #timeDiv{
+        clear:both;
+        position:absolute;
+        bottom:0px;
+        width:100%;
+        text-align: center;
+    }
+</style>
+
+
 <div>
-    <h1>天气</h1>
+    <h1>...mac</h1>
+    <div class="wea" id="weather">
+    </div>
+</div>
+<div id="timeDiv">
+    <hr/>
+    <p id="time">2017年2月26日 14:15:15</p>
 </div>
