--- a/src/main/webapp/app1/templates/screen/index.vm
+++ b/src/main/webapp/app1/templates/screen/index.vm
@@ -17,11 +17,25 @@
                 + seperator2 + date.getSeconds();
         return currentdate;
     }
+    
+    function getWeather() {
+        var weather = $.ajax({
+            url: "http://localhost:8099/magicService?serviceType=weather",
+            type: 'get',
+            dataType: 'json'
+        }).done(function (data, status) {
+            $("#weather").html(data.city);
+        }).fail(function (jqXhr, status, err) {
+            $("#weather").html("error");
+
+        });
+    }
     function updateTime() {
     $("#time").html(getNowFormatDate());
     }
     $(function () {
-        window.setInterval(updateTime,100)
+        window.setInterval(updateTime,100);
+        getWeather();
     })
 </script>
 
@@ -38,7 +52,7 @@
 
 
 <div>
-    <h1>...mac</h1>
+    <h1>烟花三月下扬州，甲乙丙丁午己庚辛</h1>
     <div class="wea" id="weather">
     </div>
 </div>
